# InsuranceBuddy

./: .gitignore  DEVLOG.md  README.md  code  main.py  pyproject.toml
data/raw/educational/: ACORD Forms Overview.txt  Claims Process Overview.txt  Cyber Liability Overview.txt  Directors and Officers D&O Overview.txt  Distribution and Reinsurance.txt  Employment Practices Liability EPLI Overview.txt  Endorsements Overview.txt  Exclusions and Conditions Overview.txt  Flood Insurance Overview.txt  Homeowners Overview.txt  IM Commericial Inland Marine Coverage.txt  Insurance Coverage Basics.txt  Insurance Market Structure and Regulation.txt  Intro to Commercial Auto.docx  Intro to Commercial BusinessOwners.docx  Intro to Commercial Farm.docx  Intro to Commercial Package Policy.docx  Intro to Commercial Property.docx  Intro to Commercial Umbrella.docx  Intro to Crime.docx  Intro to General Liability.docx  Intro to Workers Comp.docx  Personal Auto Overview.txt  (+3 more)
eval/: baseline.md  cases.json  run_eval.py  scorer.py
src/: abbreviations.py  chat.py  config.py  db.py  embed.py  ingest.py  ingest_batch.py  ingest_xlsx.py  migrate_state_tags.py  query_parsing.py  retrieve.py  router.py  scrape_orc.py  states.py
src/chunkers/: __init__.py  base.py  default.py  educational.py  forms.py
tests/: test_suite.py
tools/: _enrich_batch10.py  _enrich_batch11.py  _enrich_batch12.py  _enrich_batch2.py  _enrich_batch3.py  _enrich_batch4.py  _enrich_batch5.py  _enrich_batch6.py  _enrich_batch7.py  _enrich_batch8.py  _enrich_batch9.py  build_acord_cards.py  build_iso_ca_endorsements.py
(+516 files in other folders)
