[project]
name = "insurance-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.100.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.10.2",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
]
